add css and index class

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
         <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant|Merriweather" rel="stylesheet">
     </head>
     <body>
-        <section>
-            <div>
+        <section class="header">
+            <div id="header">
                 <h1>GNOME</h1>
                 <p>Having Trouble Viewing it? <span><a>View Online</span></a></p>
             </div>
         </section>
-        <section>
+        <section class="header-pic">
             <div>
                 <img src="img/big_img.jpg">
-                <p>"Simply send <br>beautiful emails <br>to peaople who <br>matter."</p>
+                <p id="header-pic">"Simply send <br>beautiful emails <br>to peaople who <br>matter."</p>
                 <hr>
-                <p>The email marketing app for smart businesses</p>
+                <p id="pad">The email marketing app for smart businesses</p>
             </div>
         </section>
         <section>
