--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <p id="pad">The email marketing app for smart businesses</p>
             </div>
         </section>
-        <section>
+        <section class="main-block">
             <h2>Main Blog Post Heading</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis lectus at arcuegestas fringilla<br> fermentum eet ipsum. Vestibulum hendrerit dignissim nunc vel volutpat. Nulla facilisi.</p>
-            <button>Details</button>
+            <button type="button">Details</button>
         </section>
         
         <section>
